--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -19,6 +19,9 @@
    <script src="assets/bootstrap/vendor/jquery-easing/jquery.easing.min.js"></script>
    <script src="assets/bootstrap/js/sb-admin-2.min.js"></script>
    <script src="app/components/intervention/intervention.module.js"></script>
+   <script src="app/components/intervention/intervention.model.js"></script>
+   <script src="app/components/intervention/intervention.dialog.js"></script>
+
    <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
       rel="stylesheet">
